--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "^15.2.4",
+    "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
