--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "archway",
+  "name": "flowbite-react-template-nextjs",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,36 +7,33 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
-    "lucide-react": "^0.488.0",
-    "next": "^15.2.4",
-    "next-auth": "^4.24.11",
-    "next-themes": "^0.4.6",
-    "quill": "^2.0.3",
+    "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/node": "^20.17.30",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint": "^9.24.0",
+    "eslint-config-next": "^15.3.0",
+    "flowbite-typography": "^1.0.3",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.3",
-    "typescript": "^5"
+    "postcss-import": "^16.1.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.8.3"
   }
 }
