--- a/package.json
+++ b/package.json
@@ -12,13 +12,20 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "@dicebear/collection": "^9.2.2",
+    "@dicebear/core": "^9.2.2",
+    "@vercel/blob": "^1.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.7",
     "lucide-react": "^0.503.0",
+    "mongoose": "^8.13.2",
     "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
